force-app/main/default/objects/objApplication__c/objApplication__c.object-meta.xml
<CustomObject>
    <label>申請</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>申請</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>