force-app/main/default/objects/objApplication__c/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <formula>objApplicationTemplate__r.Name</formula>
    <label>申請名</label>
    <type>Text</type>
</CustomField>