force-app/main/default/objects/objApplication__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>建物名・部屋番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>