force-app/main/default/objects/objApplication__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>その他</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>