force-app/main/default/objects/objApplication__c/fields/FirstnameKanji__c.field-meta.xml
<CustomField>
    <fullName>FirstnameKanji__c</fullName>
    <label>名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>