force-app/main/default/objects/objApplication__c/fields/FirstnameYomi__c.field-meta.xml
<CustomField>
    <fullName>FirstnameYomi__c</fullName>
    <label>名(読み仮名)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>