force-app/main/default/objects/objApplication__c/fields/JobCategory__c.field-meta.xml
<CustomField>
    <fullName>JobCategory__c</fullName>
    <label>勤労形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自営業</fullName>
            </value>
            <value>
                <fullName>勤め・会社員</fullName>
            </value>
            <value>
                <fullName>学生</fullName>
            </value>
            <value>
                <fullName>無職</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>