force-app/main/default/objects/objApplication__c/fields/LastnameKanji__c.field-meta.xml
<CustomField>
    <fullName>LastnameKanji__c</fullName>
    <label>姓</label>
    <length>255</length>
    <type>Text</type>
</CustomField>