force-app/main/default/objects/objApplication__c/fields/LastnameYomi__c.field-meta.xml
<CustomField>
    <fullName>LastnameYomi__c</fullName>
    <label>姓(読み仮名)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>