force-app/main/default/objects/objApplication__c/fields/objApplicationTemplate__c.field-meta.xml
<CustomField>
    <fullName>objApplicationTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請定義</label>
    <referenceTo>objApplicationTemplate__c</referenceTo>
    <relationshipLabel>申請</relationshipLabel>
    <relationshipName>objApplication</relationshipName>
    <type>Lookup</type>
</CustomField>