force-app/main/default/objects/objApplication__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>進捗</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>下書き</fullName>
                <default>true</default>
                <label>下書き</label>
            </value>
            <value>
                <fullName>提出済み</fullName>
            </value>
            <value>
                <fullName>審査中</fullName>
            </value>
            <value>
                <fullName>承認待ち</fullName>
            </value>
            <value>
                <fullName>完了済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>