force-app/main/default/objects/objApplication__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>都道府県</label>
    <length>255</length>
    <type>Text</type>
</CustomField>