force-app/main/default/objects/objApplication__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>丁目字番地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>