force-app/main/default/objects/objApplication__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>